--- a/src/App.css
+++ b/src/App.css
@@ -66,10 +66,14 @@ html {
 }
 
 .presentation {
-  width: 80%;
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  background-color: #00000040;
+  padding: 0.5rem;
 }
 
 .presentation > h1 {
@@ -79,18 +83,20 @@ html {
   color: #fff;
 }
 
-.presentation > p {
+.presentation > h5 {
+  width: 50vw;
   text-align: center;
-  font-weight: 300;
+  font-weight: 200;
   font-size: 1.3rem;
   color: #fff;
   padding-bottom: 1.5rem;
+  line-break: auto;
 }
 
 .presentation > a {
-  background-color: transparent;
+  background-color: #0009;
   cursor: pointer;
-  border: 2px solid #fff;
+  border: 2px solid #000;
   border-radius: 3px;
   width: 10rem;
   height: 3rem;
@@ -101,11 +107,11 @@ html {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  transition: border 0.3s ease-in;
 }
 
 .presentation > a:hover {
-  background-color: #fff;
-  color: #f009;
+  border-color: #fff;
 }
 
 .about-me {
@@ -138,6 +144,16 @@ html {
   text-align: center;
   font-size: var(--content);
 }
+
+.about-me > div > p {
+  font-weight: 300;
+  text-align: center;
+  font-size: var(--content);
+  line-height: 1.5;
+  margin-bottom: 1rem;
+  font-family: 'Open Sans', sans-serif;
+}
+
 
 .projects-container {
   background-image: url(/public/patagonia-contact-full-roja.jpg);
@@ -248,5 +264,9 @@ html {
 
   .toolkit > div {
     width: 90%;
+  }
+
+  .presentation > h5 {
+    width: 80vw;
   }
 }
