--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -8,9 +8,15 @@ a {
     width: 20rem;
     min-height: 32.514rem;
     place-self: center;
-    border: 2px solid #fff;
+    border: 2px solid #000;
     border-radius: 3px;
     cursor: pointer;
+    background-color: #0009;
+    transition: border 0.3s ease-in;
+}
+
+.project:hover {
+    border-color: #fff;
 }
 
 .project-image {
@@ -32,11 +38,30 @@ a {
     font-weight: 500;
     text-align: center;
     font-size: 1.5rem;
+    color: #fff;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
 }
 
 .project-details > p {
     font-weight: 300;
     font-size: var(--content);
+    color: #eee;
+    font-size: 1rem;
+    text-align: center;
+    line-height: 1.5;
+}
+
+.project-details > div {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: auto;
+}
+
+.project-details > div > svg {
+    font-size: 2.5rem;
 }
 
 @media (max-width: 300px){
@@ -44,3 +69,4 @@ a {
         width: 18rem;
     }
 }
+
